Use th:classappend in *.th.xml, th:class in *.html.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4070 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm.html
+++ b/jar/src/main/resources/templates/forvm.html
@@ -92,14 +92,14 @@
              th:href="@{''(page=${number})}"/>
           <a th:with="number = ${page.number + 0}"
              th:text="'<'"
-             th:classappend="${! page.hasPrevious()} ? disabled"
+             th:class="${! page.hasPrevious()} ? disabled"
              th:href="@{''(page=${number})}"/>
           <a th:with="number = ${page.number + 1}"
              th:text="${number}"
              th:href="@{''(page=${number})}"/>
           <a th:with="number = ${page.number + 2}"
              th:text="'>'"
-             th:classappend="${! page.hasNext()} ? disabled"
+             th:class="${! page.hasNext()} ? disabled"
              th:href="@{''(page=${number})}"/>
           <a th:with="number = ${page.totalPages > 0 ? page.totalPages : 1}"
              th:text="'>|'"
