* Compacted HTML5Template.html into a single template. 	HTML5Template subclass implementors may optionally provide 	::head/meta, ::head/link, ::head/style, ::head/script, 	::body/header[0], ::body/main[0], ::body/aside[0], 	::body/footer[0], and ::body/script.
	* Re-factored Thymeleaf templates: *.html for semantic HTML5,
	*.th.xml for Bootstrap control classes and style.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4071 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm.html
+++ b/jar/src/main/resources/templates/forvm.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" th:href="@{/webjars/prismjs/plugins/previewers/prism-previewers.css}"/>
   <link rel="stylesheet" th:href="@{/webjars/prismjs/plugins/unescaped-markup/prism-unescaped-markup.css}"/>
   <link rel="stylesheet" th:href="@{/webjars/prismjs/plugins/wpd/prism-wpd.css}"/>
-  <link rel="stylesheet" th:href="@{/css/style.css}"/>
+  <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.css}"/>
+  <style/>
   <script th:src="@{/js/plugins.js}" th:text="''"/>
 </head>
 <body>
