Simplified HTML templates.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4316 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm.html
+++ b/jar/src/main/resources/templates/forvm.html
@@ -2,7 +2,7 @@
 <!--/* $Id$ */-->
 <html xmlns:th="http://www.thymeleaf.org" th:xmlns="@{http://www.w3.org/1999/xhtml}">
   <head th:with="gaid = ${@environment.getProperty('gaid')}">
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <meta charset="UTF-8"/>
     <title th:if="${title != null}" th:text="${title}"/>
     <meta th:if="${description != null}" name="description" th:content="${description}"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
