--- a/jar/src/main/resources/templates/forvm.th.xml
+++ b/jar/src/main/resources/templates/forvm.th.xml
@@ -2,8 +2,8 @@
 <!-- $Id$ -->
 <thlogic>
   <attr sel="head">
-    <attr sel="link"
-          th:each="css :
+    <attr sel="link[rel='stylesheet']"
+          th:each="href :
                      ${new String[] {
                          '/webjars/prismjs/themes/prism-tomorrow.css',
                          '/webjars/prismjs/plugins/toolbar/prism-toolbar.css',
@@ -16,17 +16,17 @@
                          '/webjars/prismjs/plugins/wpd/prism-wpd.css',
                          '/webjars/bootstrap/css/bootstrap.css'
                        }}"
-          th:href="@{${css}}"/>
+          th:href="@{${href}}"/>
     <attr sel="style" th:text="'
 body { padding-top: 60px; margin-bottom: 60px; }
 @media (max-width: 979px) { body { padding-top: 0px; } }
 '"/>
-    <attr sel="script"
-          th:each="script :
+    <attr sel="src"
+          th:each="src :
                      ${new String[] {
                          '/js/plugins.js'
                        }}"
-          th:src="@{${script}}" th:text="''"/>
+          th:src="@{${src}}" th:text="''"/>
   </attr>
   <attr sel="body">
     <attr sel="/header"
@@ -73,7 +73,7 @@ body { padding-top: 60px; margin-bottom: 60px; }
       <attr sel="nav//a" th:classappend="'btn btn-link'"/>
     </attr>
     <attr sel="script"
-          th:each="script :
+          th:each="src :
                      ${new String[] {
                          '/webjars/jquery/jquery.js',
                          '/webjars/bootstrap/js/bootstrap.js',
@@ -139,6 +139,6 @@ body { padding-top: 60px; margin-bottom: 60px; }
                          '/webjars/prismjs/plugins/unescaped-markup/prism-unescaped-markup.js',
                          '/webjars/prismjs/plugins/wpd/prism-wpd.js'
                        }}"
-                       th:src="@{${script}}" th:text="''"/>
+                       th:src="@{${src}}" th:text="''"/>
   </attr>
 </thlogic>
