Fixed table selection criteria.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4322 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm.th.xml
+++ b/jar/src/main/resources/templates/forvm.th.xml
@@ -27,7 +27,7 @@
             th:classappend="'btn nav-link dropdown-item text-white bg-dark'"/>
     </attr>
     <attr sel="main" th:classappend="'container'">
-      <attr sel="/table" th:classappend="'table table-striped'">
+      <attr sel="table" th:classappend="'table table-striped'">
         <attr sel="/tbody">
           <attr sel="/tr" th:classappend="'row'"/>
           <attr sel="article-row">
