--- a/jar/src/main/resources/templates/forvm.html
+++ b/jar/src/main/resources/templates/forvm.html
@@ -13,37 +13,44 @@
   <body>
     <th:block th:insert="~{browserupgrade}"/>
     <header>
-      <nav>
-        <a th:text="${brand ?: 'Home'}" th:href="@{/}"/>
-        <ul>
-          <li sec:authorize="hasAuthority('AUTHOR')">
-            <button th:text="'Author'"/>
-            <ul>
-              <li><a th:text="'Preview'" th:href="@{/preview/}"/></li>
+      <nav th:ref="navbar">
+        <th:block th:ref="container">
+          <div th:ref="navbar-brand">
+            <a th:text="${#strings.defaultString(brand, 'Home')}" th:href="@{/}"/>
+          </div>
+          <div th:ref="navbar-menu">
+            <ul th:ref="navbar-start"></ul>
+            <ul th:ref="navbar-end">
+              <li th:ref="navbar-item" sec:authorize="hasAuthority('AUTHOR')">
+                <button th:text="'Author'"/>
+                <ul th:ref="navbar-dropdown">
+                  <li><a th:text="'Preview'" th:href="@{/preview/}"/></li>
+                </ul>
+              </li>
+              <li th:ref="navbar-item" sec:authorize="hasAuthority('SUBSCRIBER')">
+                <button th:text="'Subscriber'" th:disabled="${true}"/>
+                <ul th:ref="navbar-dropdown">
+                </ul>
+              </li>
+              <li th:ref="navbar-item">
+                <button th:text="'Collections'"/>
+                <ul th:ref="navbar-dropdown">
+                  <li><a th:text="'Authors'" th:href="@{/authors/}"/></li>
+                </ul>
+              </li>
+              <li th:ref="navbar-item" sec:authorize="!isAuthenticated()">
+                <a th:text="'Login'" th:href="@{/login}"/>
+              </li>
+              <li th:ref="navbar-item" sec:authorize="isAuthenticated()">
+                <button sec:authentication="name"/>
+                <ul th:ref="navbar-dropdown">
+                  <li><a th:text="'Change Password'" th:href="@{/password}"/></li>
+                  <li><a th:text="'Logout'" th:href="@{/logout}"/></li>
+                </ul>
+              </li>
             </ul>
-          </li>
-          <li sec:authorize="hasAuthority('SUBSCRIBER')">
-            <button th:text="'Subscriber'" th:disabled="${true}"/>
-            <ul>
-            </ul>
-          </li>
-          <li>
-            <button th:text="'Collections'"/>
-            <ul>
-              <li><a th:text="'Authors'" th:href="@{/authors/}"/></li>
-            </ul>
-          </li>
-          <li sec:authorize="!isAuthenticated()">
-            <a th:text="'Login'" th:href="@{/login}"/>
-          </li>
-          <li sec:authorize="isAuthenticated()">
-            <button sec:authentication="name"/>
-            <ul>
-              <li><a th:text="'Change Password'" th:href="@{/password}"/></li>
-              <li><a th:text="'Logout'" th:href="@{/logout}"/></li>
-            </ul>
-          </li>
-        </ul>
+          </div>
+        </th:block>
       </nav>
     </header>
     <main th:unless="${#ctx.containsVariable('exception')}"
@@ -96,9 +103,9 @@
       </section>
     </main>
     <footer>
-      <nav>
-        <span th:text="${#request.servletPath}"/>
-        <span>
+      <nav th:ref="navbar">
+        <span th:ref="left" th:text="${#request.servletPath}"/>
+        <span th:ref="center">
           <th:block th:if="${#ctx.containsVariable('page')}">
             <a th:with="number = ${1}"
                th:text="'|<'"
@@ -119,7 +126,7 @@
                th:href="@{''(page=${number})}"/>
           </th:block>
         </span>
-        <span>
+        <span th:ref="right">
           <th:block sec:authorize="isAuthenticated()">
             <span sec:authentication="authorities"/>
           </th:block>
