Use #webjars.assets().
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6781 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.th.xml
+++ b/src/main/resources/templates/forvm.th.xml
@@ -3,9 +3,8 @@
 <thlogic>
   <attr sel="head">
     <attr sel="link[rel='stylesheet']"
-          th:each="href : ${#strings.listSplit(stylesheets, ',')}"
-          th:with="path = @{${#strings.trim(href)}}"
-          th:href="@{${#webjars.cdn(#request.scheme, path)}}"/>
+          th:each="href : ${#webjars.assets(true, #request.scheme, stylesheets)}"
+          th:href="@{${href}}"/>
     <attr sel="style" th:if="${style != null}" th:text="${style}"/>
   </attr>
   <attr sel="body">
@@ -65,8 +64,7 @@
       </attr>
     </attr>
     <attr sel="script"
-          th:each="src : ${#strings.listSplit(scripts, ',')}"
-          th:with="path = @{${#strings.trim(src)}}"
-          th:src="@{${#webjars.cdn(#request.scheme, path)}}" th:text="''"/>
+          th:each="src : ${#webjars.assets(true, #request.scheme, scripts)}"
+          th:src="@{${src}}" th:text="''"/>
   </attr>
 </thlogic>
