--- a/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -2,12 +2,10 @@
 <div>
   <div>
     <div>
-      <form th:object="${form}">
-        <input type="email"
-               th:value="${#authentication.getPrincipal().getUsername()}"
-               readonly="readonly"/>
-        <input type="hidden" th:name="username"
-               th:value="${#authentication.getPrincipal().getUsername()}"/>
+      <form th:object="${form}"
+            th:with="username = ${#authentication.principal.username}">
+        <input type="email" th:value="${username}" readonly="readonly"/>
+        <input type="hidden" th:name="username" th:value="${username}"/>
         <label th:text="'E\'mail Address'"/>
         <input type="password" th:name="password"
                th:placeholder="'Old Password'"/>
