In Change Password, verify Principal.getName() matches ChangePasswordForm.getUsername().
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6922 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.html
+++ b/src/main/resources/templates/forvm.html
@@ -63,6 +63,7 @@
       <section th:case="*">
         <th:block th:if="${#ctx.containsVariable('form')}">
           <th:block th:insert="~{${#execInfo.templateName + '/' + form.class.simpleName}}"/>
+          <p th:if="${#ctx.containsVariable('errors')}" th:text="${errors}"/>
         </th:block>
         <table th:if="${#ctx.containsVariable('articles')}">
           <tbody>
