--- a/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -2,8 +2,7 @@
 <div>
   <div>
     <div>
-      <form th:object="${form}"
-            th:with="username = ${#authentication.principal.username}">
+      <form th:object="${form}" th:with="username = ${#authentication.name}">
         <input type="email" th:value="${username}" readonly="readonly"/>
         <input type="hidden" th:name="username" th:value="${username}"/>
         <label th:text="'E\'mail Address'"/>
