Use HTTPS for WebJar CDN assets.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6951 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.th.xml
+++ b/src/main/resources/templates/forvm.th.xml
@@ -3,7 +3,7 @@
 <thlogic>
   <attr sel="head">
     <attr sel="link[rel='stylesheet']"
-          th:each="href : ${#webjars.assets(true, #request.scheme, stylesheets)}"
+          th:each="href : ${#webjars.assets(true, 'https', stylesheets)}"
           th:href="@{${href}}"/>
     <attr sel="style" th:if="${style != null}" th:text="${style}"/>
   </attr>
@@ -64,7 +64,7 @@
       </attr>
     </attr>
     <attr sel="script"
-          th:each="src : ${#webjars.assets(true, #request.scheme, scripts)}"
+          th:each="src : ${#webjars.assets(true, 'https', scripts)}"
           th:src="@{${src}}" th:text="''"/>
   </attr>
 </thlogic>
