--- a/src/main/resources/templates/forvm.html
+++ b/src/main/resources/templates/forvm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--/* $Id$ */-->
-<html xmlns:th="http://www.thymeleaf.org" th:xmlns="@{http://www.w3.org/1999/xhtml}">
+<html xmlns:th="http://www.thymeleaf.org" th:xmlns="@{http://www.w3.org/1999/xhtml}" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
   <head>
     <meta charset="UTF-8"/>
     <title th:if="${title != null}" th:text="${title}"/>
