--- a/src/main/resources/templates/forvm/LoginForm.html
+++ b/src/main/resources/templates/forvm/LoginForm.html
@@ -3,13 +3,15 @@
   <div>
     <div>
       <form th:object="${form}">
-        <input type="email" th:name="username"
-               th:placeholder="'E\'mail Address'"/>
+        <input type="email" th:name="username" th:placeholder="'E\'mail Address'"/>
         <label th:text="'E\'mail Address'"/>
-        <input type="password" th:name="password"
-               th:placeholder="'Password'"/>
+        <input type="password" th:name="password" th:placeholder="'Password'"/>
         <label th:text="'Password'"/>
         <button type="submit" th:text="'Login'"/>
+        <th:block th:if="${! oauth2.isEmpty()}">
+          <hr/>
+          <a th:each="client : ${oauth2}" th:href="@{/oauth2/authorization/{id}(id=${client.registrationId})}" th:text="${client.clientName}"/>
+        </th:block>
       </form>
     </div>
   </div>
